<resources>
    <string name="app_name" translatable="false">SafeMobile</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_dashboard">Home</string>
    <string name="menu_purchases">Purchases</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="purchases">Purchases</string>
    <string name="open_forms">Open: %d</string>
    <string name="validated_forms">Validated: %d</string>
    <string name="total_forms">Total: %d</string>
    <string name="sales">Sales</string>
    <string name="products">Products</string>
    <string name="inventory">Inventory</string>
    <string name="out_of_stock">Out of stock: %d</string>
    <string name="expired">Expired: %d</string>
    <string name="clients">Clients</string>
    <string name="providers">Providers</string>
    <string name="settings">Settings</string>
    <string name="user">User</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="short_password">Password length should at least be 5 characters</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="unkown_error">Unkown error</string>
    <string name="welcome">Welcome</string>
    <string name="action_logout">Logout</string>
    <string name="create_provider">Create Provider</string>
    <string name="search">Search</string>
    <string name="select_or_search_items">Select or Search Items</string>
    <string name="code_ph">Code: %s</string>
    <string name="name_ph">Name: %s</string>
    <string name="numero">№: %s</string>
    <string name="invoice_number">Invoice №: %s</string>
    <string name="invoice_date">Date: %s</string>
    <string name="products_count">%d product</string>
    <string name="total_sum">Total: %.2f</string>
    <string name="create_purchase">Create Purchase</string>
    <string name="provider">Provider</string>
    <string name="product">Product</string>
    <string name="del">Del</string>
    <string name="designation">Designation</string>
    <string name="unit_price">U.P</string>
    <string name="quantity">Qty</string>
    <string name="ht">HT</string>
    <string name="tva">TVA</string>
    <string name="ttc">TTC</string>
    <string name="_0dzd">0 DZD</string>
    <string name="money_place_holder">%.2f DZD</string>
    <string name="zero">0</string>
    <string name="total">Total</string>
    <string name="total_ht_sum">H.T: </string>
    <string name="total_tva_sum">TVA: </string>
    <string name="total_stamp_sum">Stamp: </string>
    <string name="total_discount_sum">Discount: </string>
    <string name="total_ttc_sum">T.T.C: </string>
    <string name="stamp">Stamp</string>
    <string name="validate">Validate</string>
    <string name="no_product_added_yet">No Product Added Yet</string>
    <string name="digit_place_holder">%d</string>
    <string name="no_purchase_yet">No Purchase Yet</string>
    <string name="no_sales_yet">No Sales Yet</string>
    <string name="no_provider_yet">You Don\'t Have Any Provider.</string>
    <string name="invalid_code">Invalid Code</string>
    <string name="code">Code</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="fax">Fax</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="rib">RIB</string>
    <string name="activity">Activity</string>
    <string name="initial_sold">Initial Sold</string>
    <string name="client">Client</string>
    <string name="add_fiscal_data">fiscality</string>
    <string name="localize">localize</string>
    <string name="notes">notes</string>
    <string name="save">Save</string>
    <string name="create_client">Create Client</string>
    <string name="no_client_yet">You Don\'t Have Any Client</string>
    <string name="create_product">Create Product</string>
    <string name="no_item_yet">You Don\'t Have Any Product Yet.</string>
    <string name="barcode">Barcode</string>
    <string name="reference">Reference</string>
    <string name="purchase_price_ht">P.Purchase HT</string>
    <string name="purchase_price_ttc">P.Purchase TTC</string>
    <string name="marge_detail">M Detail</string>
    <string name="initial_quantity">Initial Quantity</string>
    <string name="marge_whole">M Whole</string>
    <string name="marge_half_whole">M H Whole</string>
    <string name="sell_price_detail_ht">P.Sell Detail HT</string>
    <string name="sell_price_detail_ttc">P.Sell Detail TTC</string>
    <string name="sell_price_whole_ht">P.Sell Whole HT</string>
    <string name="sell_price_whole_ttc">P.Sell Whole TTC</string>
    <string name="brand">Brand</string>
    <string name="discount">Discount</string>
    <string name="registre_commerce">Registre Commerce</string>
    <string name="article_fiscale">Article Fiscale</string>
    <string name="identifiant_fiscale">Identifiant Fiscale</string>
    <string name="identifiant_statistique">Identifiant Statistique</string>
    <string name="close">Close</string>
    <string name="information_fiscal">Fiscale Informations</string>
    <string name="note">Note</string>
    <string name="add_a_note">Add A Note</string>
    <string name="select_a_phone">Select a phone number</string>
    <string name="action_update">Update</string>
    <string name="new_receipt">New Receipt</string>
    <string name="action_details">Details</string>
    <string name="marge">Marge</string>
    <string name="sell_price_ht">S.Price HT</string>
    <string name="sell_price_ttc">S.Price TTC</string>
    <string name="invalid_barcode">Invalid Barecode</string>
    <string name="invalid_reference">Invalid Reference</string>
    <string name="invalid_designation">Invalid Designation</string>
    <string name="select_product_image">Select Product Image</string>
    <string name="no_image_picked">No Image Picked</string>
    <string name="sell_price_half_whole_ht">P.Sell H Whole HT</string>
    <string name="sell_price_half_whole_ttc">P.Sell H Whole TTC</string>
    <string name="add_a_brand">Add New Brand</string>
    <string name="brand_name">Brand name</string>
    <string name="add_another">Add Another</string>
    <string name="brand_name_empty">Brand name shouldn\'t be empty!</string>
    <string name="nothing_scanned">Nothing scanned</string>
    <string name="product_details">Product Details</string>
    <string name="reference_label">Reference: %s</string>
    <string name="designation_label">Designation: %s</string>
    <string name="stock_label">Stock: %.2f</string>
    <string name="purchase_price_ht_label">PP HT: %.2f</string>
    <string name="tva_label">TVA: $%,.2f %%</string>
    <string name="purchase_price_ttc_label">PP TTC: %.2f</string>
    <string name="sell_price_detail_ht_label">SPD HT: %.2f</string>
    <string name="sell_price_detail_ttc_label">SPD TTC: %.2f</string>
    <string name="sell_price_half_whole_ht_label">SPHW HT: %.2f</string>
    <string name="sell_price_half_whole_ttc_label">SPHW TTC: %.2f</string>
    <string name="sell_price_whole_ht_label">SPW HT: %.2f</string>
    <string name="sell_price_whole_ttc_label">SPW TTC: %.2f</string>
    <string name="promo_label">Discount: %.2f %%</string>
    <string name="brand_label">Brand: %s</string>
    <string name="add_discount">Add discount</string>
    <string name="amount">Amount</string>
    <string name="create_sale">Create sale</string>
    <string name="total_amount">Total Amount: %s DZD</string>
    <string name="payment">Payment</string>
    <string name="rest">Rest</string>
    <string name="purchase_added">Purchase Added successfully</string>
    <string name="inventories">Inventories</string>
    <string name="create_inventory">Create Inventory</string>
    <string name="no_inventory_yet">You didn\'t make any inventory</string>
    <string name="logical_quantity">LQ</string>
    <string name="physical_quantity">PhQ</string>
    <string name="gap">Gap</string>
    <string name="ppttc">PP TTC</string>
    <string name="ttc_gap">TTC Gap</string>
    <string name="label">Label</string>
    <string name="numero_hint">№</string>
    <string name="total_ttc">Logical TTC Amount: %.2f</string>
    <string name="total_tva">Total TVA: %.2f</string>
    <string name="physical_ttc_amount">Physical TTC Amount: %.2f</string>
    <string name="ttc_gap_amount">TTC Gap Amount: %.2f</string>
    <string name="inventory_added">Inventory added successfully</string>
    <string name="synchronization">Synchronization</string>
    <string name="users">Users</string>
    <string name="application">Application</string>
    <string name="automatic_synchronization">Automatic Synchronization</string>
    <string name="periodic_synchronization">Periodic Synchronization</string>
    <string name="modules_to_synchronize">Modules to Synchronize</string>
    <string name="tracking_history">Tracking History</string>
    <string name="sync_now">Synchronize Now</string>
    <string name="sync_completed">%s has finished synching successfully.</string>
    <string name="synchronization_channel_name">Synchronization Results</string>
    <string name="channel_description">Notification for synchronization results.</string>
    <string name="reinitialize">Reinitialize</string>
    <string name="update_product">Update Product</string>
    <string name="default_tva">Default Tva</string>
    <string name="server_address">Server Address</string>
    <string name="ip_address">IP Address</string>
    <string name="actions">Actions</string>
    <string name="send_to_server">Send Updates To Server</string>
    <string name="warehouse">Warhouse</string>
    <string name="warehouse_code">Warehouse Code</string>
    <string name="test">Test</string>
    <string name="database">Database</string>
    <string name="database_configured_success">Database Configured Successfully</string>
    <string name="datanbase_configuration_error">Wrong Database Configuration</string>
    <string name="scanner">Scanner</string>
    <string name="email_username_phone">Email/Username/Phone</string>
    <string name="loading">Loading</string>
    <string name="load_data">Load Data</string>
    <string name="synchronization_in_progress">Synchronization In Progress…\n you\'ll receive a notification when completed</string>
    <string name="ok">Ok</string>
    <string name="reinitialization_complete">Reinitialization Completed.</string>
    <string name="admin">Admin</string>
    <string name="seller">Seller</string>
    <string name="no_users_yet">No Users Added Yet</string>
    <string name="error_loading_users">Error While Loading Users</string>
    <string name="profile">Profile</string>
    <string name="add_new_user">Add New User</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="is_admin">Is Admin</string>
    <string name="permissions">Permissions</string>
    <string name="delete_user">Delete User</string>
    <string name="details">Details</string>
    <string name="revoke_access">Revoke Access</string>
    <string name="update_user">Update User</string>
</resources>