<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/browser"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_purchases"
            android:icon="@drawable/buy"
            android:title="@string/purchases" />
        <item
            android:id="@+id/nav_sales"
            android:icon="@drawable/sales"
            android:title="@string/sales" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/product"
            android:title="@string/products" />
        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/inventory"
            android:title="@string/inventory" />
        <item
            android:id="@+id/nav_clients"
            android:icon="@drawable/clients"
            android:title="@string/clients" />
        <item
            android:id="@+id/nav_providers"
            android:icon="@drawable/factory"
            android:title="@string/providers" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
    </group>
</menu>