<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.safesoft.safemobile.ui.dashboard.HomeFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_dashboard_to_nav_purchases"
            app:destination="@id/nav_purchases" />
        <action
            android:id="@+id/action_nav_dashboard_to_nav_sales"
            app:destination="@id/nav_sales" />
        <action
            android:id="@+id/action_nav_dashboard_to_nav_products"
            app:destination="@id/nav_products" />
        <action
            android:id="@+id/action_nav_dashboard_to_nav_inventory"
            app:destination="@id/nav_inventory" />
        <action
            android:id="@+id/action_nav_dashboard_to_nav_clients"
            app:destination="@id/nav_clients" />
        <action
            android:id="@+id/action_nav_dashboard_to_nav_providers"
            app:destination="@id/nav_providers" />
        <action
            android:id="@+id/action_nav_dashboard_to_action_settings"
            app:destination="@id/nav_settings" />
        <action
            android:id="@+id/action_nav_dashboard_to_nav_clients2"
            app:destination="@id/nav_clients" />
    </fragment>

    <fragment
        android:id="@+id/nav_purchases"
        android:name="com.safesoft.safemobile.ui.purchases.PurchasesFragment"
        android:label="@string/menu_purchases"
        tools:layout="@layout/fragment_gallery">
        <action
            android:id="@+id/action_nav_purchases_to_nav_create_product"
            app:destination="@id/nav_create_product" />
        <action
            android:id="@+id/action_nav_purchases_to_nac_create_provider"
            app:destination="@id/nav_create_provider" />
    </fragment>

    <fragment
        android:id="@+id/nav_sales"
        android:name="com.safesoft.safemobile.ui.sales.SalesFragment"
        android:label="@string/sales"
        tools:layout="@layout/fragment_sales">
        <action
            android:id="@+id/action_nav_sales_to_nav_products"
            app:destination="@id/nav_products" />
        <action
            android:id="@+id/action_nav_sales_to_nav_clients"
            app:destination="@id/nav_clients" />
        <action
            android:id="@+id/action_nav_sales_to_nav_create_product"
            app:destination="@id/nav_create_product" />
        <action
            android:id="@+id/action_nav_sales_to_nav_create_client"
            app:destination="@id/nav_create_client" />
    </fragment>

    <fragment
        android:id="@+id/nav_products"
        android:name="com.safesoft.safemobile.ui.products.ProductsFragment"
        android:label="@string/products"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/nav_inventory"
        android:name="com.safesoft.safemobile.ui.inventory.InventoryFragment"
        android:label="@string/inventory"
        tools:layout="@layout/fragment_inventory">
        <action
            android:id="@+id/action_nav_inventory_to_nav_create_product"
            app:destination="@id/nav_create_product" />
    </fragment>

    <fragment
        android:id="@+id/nav_clients"
        android:name="com.safesoft.safemobile.ui.clients.ClientsFragment"
        android:label="@string/clients"
        tools:layout="@layout/fragment_clients" />

    <fragment
        android:id="@+id/nav_providers"
        android:name="com.safesoft.safemobile.ui.providers.ProvidersFragment"
        android:label="@string/providers"
        tools:layout="@layout/fragment_providers" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.safesoft.safemobile.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_create_product"
        android:name="com.safesoft.safemobile.ui.products.CreateProductFragment"
        android:label="@string/product"
        tools:layout="@layout/fragment_create_product" />

    <fragment
        android:id="@+id/nav_create_client"
        android:name="com.safesoft.safemobile.ui.clients.CreateClientFragment"
        android:label="@string/client"
        tools:layout="@layout/fragment_create_client" />

    <fragment
        android:id="@+id/nav_create_provider"
        android:name="com.safesoft.safemobile.ui.providers.CreateProviderFragment"
        android:label="@string/provider"
        tools:layout="@layout/fragment_create_provider" />


    <action android:id="@+id/action_global_nav_settings" app:destination="@id/nav_settings" />

</navigation>