<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.safesoft.safemobile.viewmodel.SettingsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"
            tools:context=".ui.settings.SynchronizationSettings">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/periodic_synchronization" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_auto_sync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:checked="@={viewModel.autoSync}"
                android:text="@string/automatic_synchronization" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/sync_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:entries="@array/synchronization_periods" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modules_to_synchronize" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_clients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:checked="@={viewModel.clientsSync}"
                android:text="@string/clients" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_providers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:checked="@={viewModel.providersSync}"
                android:text="@string/providers" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_products"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:checked="@={viewModel.productsSync}"
                android:text="@string/products" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_sales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:checked="@={viewModel.salesSync}"
                android:text="@string/sales" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_purchases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:checked="@={viewModel.purchasesSync}"
                android:text="@string/purchases" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_inventories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:checked="@={viewModel.inventoriesSync}"
                android:text="@string/inventories" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_tracking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:checked="@={viewModel.trackingSync}"
                android:text="@string/tracking_history" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/save" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/sync_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:contentDescription=""
                android:src="@drawable/ic_sync"
                android:tooltipText="@string/sync_now"
                app:fabSize="normal" />

        </com.google.android.material.circularreveal.CircularRevealLinearLayout>
    </ScrollView>
</layout>