<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="product"
            type="com.safesoft.safemobile.backend.db.entity.AllAboutAProduct" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_8sdp">

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/product_image"
                android:layout_width="@dimen/_64sdp"
                android:layout_height="@dimen/_64sdp"
                android:layout_margin="@dimen/_5sdp"
                android:src="@drawable/ic_product" />

            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:hint="@string/reference"
                    android:text="@{product.product.reference}" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:hint="@string/designation"
                    android:text="@{product.product.designation}" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:hint="@string/quantity"
                    android:text="@{product.product.quantity.toString()}" />

            </com.google.android.material.circularreveal.CircularRevealLinearLayout>


            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:hint="@string/purchase_price_ht"
                    android:text="@{product.product.purchasePriceHT.toString()}" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:hint="@string/purchase_price_ttc"
                    android:text="@{product.product.purchasePriceTTC.toString()}" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:hint="@string/marge"
                    android:text="@{product.product.marge.toString()}" />

            </com.google.android.material.circularreveal.CircularRevealLinearLayout>

            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:hint="@string/sell_price_ht"
                    android:text="@{String.valueOf(product.product.sellPriceDetailHT)}" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:hint="@string/sell_price_ttc"
                    android:text="@{String.valueOf(product.product.sellPriceDetailTTC)}" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:hint="@string/tva"
                    android:text="@{product.product.tva.toString()}" />

            </com.google.android.material.circularreveal.CircularRevealLinearLayout>

        </com.google.android.material.circularreveal.CircularRevealLinearLayout>
    </com.google.android.material.card.MaterialCardView>

</layout>