<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/delete_header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/del"
            android:textColor="@color/black"
            android:textSize="@dimen/form_items_header_font_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/designation_header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/form_items_header_margin_start"
            android:text="@string/designation"
            android:textColor="@color/black"
            android:textSize="@dimen/form_items_header_font_size"
            app:layout_constraintStart_toEndOf="@id/delete_header_text"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/unit_price_header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/form_items_header_margin_start"
            android:text="@string/unit_price"
            android:textColor="@color/black"
            android:textSize="@dimen/form_items_header_font_size"
            app:layout_constraintStart_toEndOf="@id/designation_header_text"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/quantity_header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/form_items_header_margin_start"
            android:text="@string/quantity"
            android:textColor="@color/black"
            android:textSize="@dimen/form_items_header_font_size"
            app:layout_constraintStart_toEndOf="@id/unit_price_header_text"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/price_ht_header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/form_items_header_margin_start"
            android:text="@string/ht"
            android:textColor="@color/black"
            android:textSize="@dimen/form_items_header_font_size"
            app:layout_constraintStart_toEndOf="@id/quantity_header_text"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tva_header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/form_items_header_margin_start"
            android:text="@string/tva"
            android:textColor="@color/black"
            android:textSize="@dimen/form_items_header_font_size"
            app:layout_constraintStart_toEndOf="@id/price_ht_header_text"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/price_ttc_header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/form_items_header_margin_start"
            android:text="@string/ttc"
            android:textColor="@color/black"
            android:textSize="@dimen/form_items_header_font_size"
            app:layout_constraintStart_toEndOf="@id/tva_header_text"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>